--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -1,3 +1,113 @@
+body {
+    font-family: "Montserrat", sans-serif;
+    background-color: #fff;
+    padding-left: 36px auto;
+    /* font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em; */
+    
+}
+
+.form {
+    max-width: 360px;
+    
+    /* margin: 36px auto; */
+
+}
+
+.delay {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+input {
+    display: block;
+    padding-left: 20px;
+    height: 40px;
+    border-radius: 4px;
+    stroke-width: 1px;
+    border: 1px solid #808080;
+    transition: border-color 0.3s;
+} 
+
+input:hover {
+    border-color: #2E2F42;
+}
+
+input:focus {
+    border-color: #4E75FF;
+}
+
+
+.fildset-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.label-fildset {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #2e2f42;
+}
+
+.fieldset {
+    padding: 16px 48px 8px 48px;
+    display:block;
+    margin-bottom: 24px;
+    border-radius: 4px;
+    border: 1px solid #808080;
+
+}
+
+fieldset:hover {
+    border: 1px solid #2E2F42;
+}
+
+legend {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #2e2f42;
+}
+
+input[type="radio"] {
+    border: 1px solid #757575;
+    border-radius: 14px;
+    width: 20px;
+    height: 20px; 
+}
+
+
+button {
+    
+    border-radius: 8px;
+    padding: 8px auto;
+    width: 360px;
+    height: 40px;
+    background: #4e75ff;
+}
+
+button:hover {
+    background-color: #6c8cff;;
+    color: white; 
+}
+
 .iziToast .iziToast-close {
     color: white;
 }
@@ -22,5 +132,13 @@ font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.03em;
 color: #fff;
+}
+
+.my-icon {
+    background-image: url('../img/sprite-icons#icon-error');
+    background-position: -10px -20px; 
+    width: 24px; 
+    height: 24px; 
+    display: inline-block; 
 }
 
