--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -126,6 +126,13 @@ letter-spacing: 0.03em;
 color: #fff;
 }
 
+.iziToast-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 .iziToast .iziToast-message {
 font-weight: 400;
 font-size: 16px;
@@ -134,11 +141,9 @@ letter-spacing: 0.03em;
 color: #fff;
 }
 
-.my-icon {
-    background-image: url('../img/sprite-icons#icon-error');
-    background-position: -10px -20px; 
-    width: 24px; 
-    height: 24px; 
-    display: inline-block; 
+.iziToast-close {
+    color: white; 
+    font-size: 18px; 
 }
+
 
