--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -100,49 +100,35 @@ color: #2e2f42;
 }
 
 .iziToast {
-    border-bottom: 2px solid #ffbebe;
-    border-radius: 4px;
-    padding: 20px;
-    width: 302px;
-    height: 64px;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-content: center;
     justify-content: center;
-
+    width: 302px;
+    height: 64px;
 }
 
-.iziToast .iziToast-title {
-font-weight: 700;
-font-size: 16px;
-line-height: 150%;
-letter-spacing: 0.03em;
-color: #fff;
+.iziToast-close {
+    background-size: 20px
+}
+
+.iziToast-texts {
+    display: flex;
+    flex-direction: column;
+}
+
+.iziToast-close {
+    width: 30px; 
+    height: 30px;
+}
+
+.iziToast .iziToast-title, .iziToast .iziToast-message {
+    text-align: center;
 }
 
 .iziToast .iziToast-message {
-font-weight: 400;
-font-size: 16px;
-line-height: 150%;
-letter-spacing: 0.03em;
-color: #fff;
+    margin: 0; 
+    padding: 0; 
 }
-
-.iziToast-body {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.iziToast-close {
-    color: white; 
-    font-size: 18px; 
-} 
-
-.custom-icon {
-    color: white; 
-} 
 
 
